[gd_scene load_steps=20 format=2]

[ext_resource path="res://Game/Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://icon2.jpeg" type="Texture" id=2]
[ext_resource path="res://Game/Assets/Background assets/Untitled_Artwork-2 (1).png" type="Texture" id=3]
[ext_resource path="res://Game/Script/World/World.gd" type="Script" id=4]
[ext_resource path="res://Game/Scenes/Camera2D.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game/Scenes/PickUps/Rubbish.tscn" type="PackedScene" id=6]
[ext_resource path="res://Game/Scenes/Enemies/FollowEnemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game/Assets/Background assets/IMG_3129.PNG" type="Texture" id=8]
[ext_resource path="res://Game/Scenes/Interactables/Bush.tscn" type="PackedScene" id=9]
[ext_resource path="res://Game/Assets/Background assets/Untitled_Artwork-4 (1).png" type="Texture" id=10]
[ext_resource path="res://Game/Assets/Background assets/Untitled_Artwork-1 (1).png" type="Texture" id=11]
[ext_resource path="res://Game/Assets/Background assets/Untitled_Artwork-1(1).png" type="Texture" id=12]
[ext_resource path="res://Game/Scenes/House.gd" type="Script" id=13]
[ext_resource path="res://Game/Scenes/UI/GUI.tscn" type="PackedScene" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3935, 304.5 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 521.111
height = 0.0

[sub_resource type="CircleShape2D" id=5]
radius = 589.054

[sub_resource type="CapsuleShape2D" id=3]
radius = 238.889
height = 279.999

[sub_resource type="CapsuleShape2D" id=4]
radius = 137.778
height = 128.89

[node name="Map" type="Node2D"]
script = ExtResource( 4 )

[node name="Icon2" type="Sprite" parent="."]
position = Vector2( 580, 341 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Icon2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Icon2/KinematicBody2D"]
position = Vector2( -80, -2777 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Icon2/KinematicBody2D"]
position = Vector2( 3705, -544 )
rotation = -1.57079
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Icon2/KinematicBody2D"]
position = Vector2( -230, 2778 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Icon2/KinematicBody2D"]
position = Vector2( -3705, -934 )
rotation = -1.57079
shape = SubResource( 1 )

[node name="Buildings" type="Node2D" parent="."]

[node name="RitualBuilding" type="KinematicBody2D" parent="Buildings"]
position = Vector2( -2258, 940 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Buildings/RitualBuilding"]
position = Vector2( 5048, -2315 )
scale = Vector2( 0.9, 0.9 )
polygon = PoolVector2Array( -366.667, 447.778, -476.667, 377.778, -452.223, 253.333, -357.778, 223.333, -266.667, 200, -210, 195.556, -195.556, 46.6666, -180, -112.222, -120, -224.444, -78.8894, -264.444, -94.4451, -452.222, -47.7783, -506.667, 32.2217, -501.111, 65.5549, -466.667, 84.4438, -311.111, 126.666, -221.111, 141.111, -101.111, 197.777, -18.8889, 225.555, 46.6666, 225.555, 115.556, 252.222, 164.444, 248.888, 202.222, 378.888, 223.333, 404.444, 233.333, 433.333, 252.222, 458.888, 292.222, 465.555, 328.889, 458.888, 385.556, 416.666, 416.667, 334.444, 461.111, 233.333, 496.667, 183.333, 511.111, 96.666, 482.222, 8.88818, 471.111, -73.334, 471.111, -174.445, 494.444, -237.778, 503.333, -348.889, 475.556 )

[node name="UntitledArtwork-2(1)" type="Sprite" parent="Buildings/RitualBuilding"]
position = Vector2( 5048, -2315 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 12 )

[node name="StoneBuilding" type="KinematicBody2D" parent="Buildings"]
position = Vector2( -2017, 3856 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Buildings/StoneBuilding"]
position = Vector2( 5035, -2161 )
scale = Vector2( 0.9, 0.9 )
polygon = PoolVector2Array( -488.888, 198.889, -452.222, 148.889, -384.444, 134.444, -270, 102.222, -217.777, -2.22217, -145.555, -10, -127.777, -180, -67.7773, -296.667, 16.6672, -372.222, 112.223, -364.444, 166.667, -294.444, 192.223, -162.222, 184.445, -95.5555, 224.445, -20, 286.667, 46.6667, 314.445, 112.222, 371.112, 76.6667, 433.334, 72.2223, 465.556, 152.222, 481.112, 194.444, 465.556, 206.667, 358.889, 206.667, 451.112, 274.444, 483.334, 284.444, 493.334, 306.667, 356.667, 326.667, 291.112, 324.444, -197.777, 321.111, -252.222, 291.111, -316.666, 278.889, -372.222, 246.667, -412.222, 234.444, -458.888, 224.444 )

[node name="UntitledArtwork-2(1)" type="Sprite" parent="Buildings/StoneBuilding"]
position = Vector2( 5035, -2161 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )

[node name="House" type="KinematicBody2D" parent="Buildings"]
position = Vector2( -7000, 855 )
script = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/House"]
modulate = Color( 0.945098, 1, 0, 1 )
position = Vector2( 5017, -2189 )
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 6 )

[node name="UntitledArtwork-2(1)" type="Sprite" parent="Buildings/House"]
position = Vector2( 5035, -2161 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 8 )

[node name="EnterArea" type="Area2D" parent="Buildings/House"]
position = Vector2( 5017, -2155 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/House/EnterArea"]
modulate = Color( 0.717647, 0.160784, 0.811765, 1 )
shape = SubResource( 5 )

[node name="LakeBuilding" type="KinematicBody2D" parent="Buildings"]
position = Vector2( -6728, 4161 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/LakeBuilding"]
position = Vector2( 5037, -2166 )
rotation = 1.57079
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 3 )

[node name="UntitledArtwork-2(1)" type="Sprite" parent="Buildings/LakeBuilding"]
position = Vector2( 5035, -2161 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 10 )

[node name="TableBuilding" type="KinematicBody2D" parent="Buildings"]
position = Vector2( -4944, 2981 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Buildings/TableBuilding"]
position = Vector2( 5035, -2161 )
rotation = 1.57079
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 4 )

[node name="UntitledArtwork-2(1)" type="Sprite" parent="Buildings/TableBuilding"]
position = Vector2( 5035, -2161 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 588, 326 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 15.0
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="Rubbish" parent="." instance=ExtResource( 6 )]
position = Vector2( 500, 200 )
item_val = 0

[node name="FollowEnemy" parent="." instance=ExtResource( 7 )]
position = Vector2( 234, 341 )

[node name="CameraShake" parent="." instance=ExtResource( 5 )]
current = false

[node name="Bush" parent="." instance=ExtResource( 9 )]
position = Vector2( 700, 300 )
numberOfItems = 1

[node name="GUI" parent="." instance=ExtResource( 19 )]

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="HouseLeft" type="Position2D" parent="SpawnPoints"]
position = Vector2( -1983, -779 )

[connection signal="body_entered" from="Buildings/House/EnterArea" to="Buildings/House" method="_on_EnterArea_body_entered"]
[connection signal="body_exited" from="Buildings/House/EnterArea" to="Buildings/House" method="_on_EnterArea_body_exited"]
